update: test wf

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,8 +2,8 @@ name: Go Test
 
 on:
   push:
-    branches:
-      - master
+    tags:
+      - 'v*.*.*'
   pull_request:
     branches:
       - master
